--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,22 @@ html,
 body {
   height: 100%;
 }
+.container {
+  background: pink;
+  max-width: 1080px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+header {
+  border: 1px solid black;
+}
+.banner {
+  border: 1px solid black;
+}
+.info {
+  border: 1px solid black;
+}
+footer {
+  border: 1px solid black;
+}
