--- a/less/index.less
+++ b/less/index.less
@@ -107,6 +107,17 @@ header {
 
 .banner {
 	.testBorder();
+	display: flex;
+
+	.avatar {
+		height: 100px;
+		width: 100px;
+		background: red;
+	}
+
+	.tile {
+		background: green;
+	}
 }
 
 .info {
