--- a/css/index.css
+++ b/css/index.css
@@ -152,21 +152,29 @@ header nav a {
   background: #0a0a0a;
   border-radius: 5px;
   padding: 0.5rem 2.5rem;
-  margin: 1rem 3rem;
+  margin: 0rem 3rem;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
   color: lightgrey;
   text-decoration: none;
 }
 .banner {
   border: 1px solid red;
   display: flex;
+  justify-content: center;
 }
 .banner .avatar {
-  height: 100px;
-  width: 100px;
-  background: red;
+  margin-right: 1rem;
+}
+.banner .avatar img {
+  height: 20rem;
+  border-radius: 50%;
+  border: 5px solid #0a0a0a;
 }
 .banner .tile {
-  background: green;
+  border: 1px solid red;
+  margin-left: 1rem;
+  width: 20rem;
 }
 .info {
   border: 1px solid red;
