--- a/less/index.less
+++ b/less/index.less
@@ -63,6 +63,8 @@ html, body {
 @maxWidth: 1080px;
 @desktopRootFontSize: 100%;
 @mobileRootFontSize: 150%;
+@avatarDiameter: 20rem;
+@bannerMiddleMargin: 1rem;
 
 // Mixins
 .testBorder() {
@@ -98,7 +100,9 @@ header {
 			background: rgb(10, 10, 10);
 			border-radius: 5px;
 			padding: 0.5rem 2.5rem;
-			margin: 1rem 3rem;
+			margin: 0rem 3rem;
+			margin-top: 1rem;
+			margin-bottom: 2rem;
 			color: lightgrey;
 			text-decoration: none;
 		}
@@ -108,15 +112,34 @@ header {
 .banner {
 	.testBorder();
 	display: flex;
+	justify-content: center;
 
 	.avatar {
-		height: 100px;
-		width: 100px;
-		background: red;
+		margin-right: @bannerMiddleMargin;
+
+		img {
+			height: @avatarDiameter;
+			border-radius: 50%;
+			border: 5px solid rgb(10, 10, 10);
+		}
 	}
 
 	.tile {
-		background: green;
+		.testBorder();
+		margin-left: @bannerMiddleMargin;
+		width: @avatarDiameter;
+
+		h1 {
+
+		}
+
+		.bio.short {
+
+		}
+
+		button {
+			
+		}
 	}
 }
 
