--- a/css/index.css
+++ b/css/index.css
@@ -144,6 +144,10 @@ body {
   display: flex;
   flex-direction: column;
 }
+header {
+  padding-top: 1rem;
+  padding-bottom: 5rem;
+}
 header nav {
   display: flex;
   justify-content: center;
@@ -153,13 +157,10 @@ header nav a {
   border-radius: 5px;
   padding: 0.5rem 2.5rem;
   margin: 0rem 3rem;
-  margin-top: 1rem;
-  margin-bottom: 2rem;
   color: lightgrey;
   text-decoration: none;
 }
 .banner {
-  border: 1px solid red;
   display: flex;
   justify-content: center;
 }
@@ -172,9 +173,30 @@ header nav a {
   border: 5px solid #0a0a0a;
 }
 .banner .tile {
-  border: 1px solid red;
   margin-left: 1rem;
-  width: 20rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+.banner .tile h1 {
+  font-size: 3rem;
+  color: lightgrey;
+}
+.banner .tile .bio.short {
+  font-size: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  line-height: 3rem;
+  color: lightgrey;
+}
+.banner .tile button {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  background: #0a0a0a;
+  color: lightgrey;
+  border: 5px solid #0f0f0f;
 }
 .info {
   border: 1px solid red;
