--- a/less/index.less
+++ b/less/index.less
@@ -63,6 +63,9 @@ html, body {
 @maxWidth: 1080px;
 @desktopRootFontSize: 100%;
 @mobileRootFontSize: 150%;
+@h1Relative: 1rem * 3;
+@h2Relative: 1rem * 2;
+@h3Relative: 1rem * 1.5;
 @avatarDiameter: 20rem;
 @bannerMiddleMargin: 1rem;
 
@@ -71,7 +74,7 @@ html, body {
 	border: 1px solid red;
 }
 
-.flex-column() {
+.flexColumn() {
 	display: flex;
 	flex-direction: column;
 }
@@ -85,12 +88,13 @@ html, body {
 	background: rgb(20, 20, 20);
 	max-width: @maxWidth;
 	margin: 0 auto;
-	.flex-column();
+	.flexColumn();
 }
 
 header {
-	// .testBorder();
-
+	padding-top: 1rem;
+	padding-bottom: 5rem;
+	
 	nav {
 		display: flex;
 		justify-content: center;
@@ -101,8 +105,6 @@ header {
 			border-radius: 5px;
 			padding: 0.5rem 2.5rem;
 			margin: 0rem 3rem;
-			margin-top: 1rem;
-			margin-bottom: 2rem;
 			color: lightgrey;
 			text-decoration: none;
 		}
@@ -110,7 +112,6 @@ header {
 }
 
 .banner {
-	.testBorder();
 	display: flex;
 	justify-content: center;
 
@@ -125,20 +126,30 @@ header {
 	}
 
 	.tile {
-		.testBorder();
 		margin-left: @bannerMiddleMargin;
-		width: @avatarDiameter;
+		.flexColumn();
+		align-items: center;
+		justify-content: space-between;
 
 		h1 {
-
+			font-size: @h1Relative;
+			color: lightgrey;
 		}
 
 		.bio.short {
-
+			font-size: @h3Relative;
+			.flexColumn();
+			align-items: center;
+			line-height: 3rem;
+			color: lightgrey;
 		}
 
 		button {
-			
+			font-size: @h2Relative;
+			margin-bottom: 1rem;
+			background: rgb(10, 10, 10);
+			color: lightgrey;
+			border: 5px solid rgb(15, 15, 15);
 		}
 	}
 }
