--- a/css/index.css
+++ b/css/index.css
@@ -107,10 +107,6 @@ section {
 body {
   line-height: 1;
 }
-ol,
-ul {
-  list-style: none;
-}
 blockquote,
 q {
   quotes: none;
@@ -225,14 +221,15 @@ header nav a {
   align-items: center;
 }
 .info .box.top .left {
-  border: 1px solid red;
   display: block;
   border: 5px solid #0a0a0a;
+  max-width: 60%;
 }
 .info .box.top .right {
   background: purple;
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
 }
 .info .bottom {
   background: blue;
