--- a/less/index.less
+++ b/less/index.less
@@ -86,6 +86,10 @@ html, body {
 	border-radius: 5px;
 }
 
+.giveStandardBorder() {
+	border: @standardBorder;
+}
+
 // The rest
 .root {
 	font-size: @desktopRootFontSize;
@@ -173,7 +177,6 @@ header {
 }
 
 .info {
-	.testBorder();
 	.flexColumn();
 	margin: 1rem;
 
@@ -182,36 +185,72 @@ header {
 	}
 
 	.box.top {
-		background: green;
 		display: flex;
 		align-items: center;
+		margin-top: 2rem;
 
 		.left {
 			display: block;
-			border: @standardBorder;
+			.giveStandardBorder();
 			max-width: 60%;
+			padding: 1rem;
 		}
 
 		.right {
-			background: purple;
 			.flexColumn();
+			align-items: flex-start;
 			flex-grow: 1;
+			.giveStandardBorder();
 		
 			.skills {
+				margin: 1rem 0.5rem;
+			}
 
+			hr {
+				margin: 0 1rem;
+				border: 0;
+				border-bottom: 1px solid lightgrey;
 			}
 
 			.interests {
+				margin: 1rem 0.5rem; // Hmm... a little repetition here! Better class names would have prevented this.
+			}
 
+			ol {
+				padding-left: 1.5rem;
+			}
+
+			h2 {
+				margin-bottom: 1rem;
 			}
 		}
 	}
 
-	.bottom {
-		background: blue;
+	.box.bottom {
+		.giveStandardBorder();
+		padding: 1rem;
+
+		h2 {
+			margin-bottom: 1rem;
+		}
+
+		ul {
+			list-style: none;
+		}
 	}
 }
 
 footer {
-	.testBorder();
+	display: flex;
+	justify-content: center;
+
+	button {
+		margin-bottom: 1rem;
+		background: rgb(10, 10, 10);
+		border: none;
+		padding: 0.5rem;
+		margin: 1rem;
+		.roundCorners();
+		color: lightgrey;
+	}
 }
