--- a/less/index.less
+++ b/less/index.less
@@ -73,9 +73,9 @@ html, body {
 @baselineFontColor: lightgrey;
 
 // Mixins
-.testBorder() {
-	border: 1px solid red;
-}
+// .testBorder() {
+// 	border: 1px solid red;
+// }
 
 .flexColumn() {
 	display: flex;
@@ -100,157 +100,157 @@ html, body {
 	max-width: @maxWidth;
 	margin: 0 auto;
 	.flexColumn();
-}
 
-h1 {
-	font-size: @h1Relative;
-}
-
-h2 {
-	font-size: @h2Relative;
-}
-
-h3 {
-	font-size: @h3Relative;
-}
-
-h1, h2, h3, p, li {
-	color: @baselineFontColor;
-}
-
-header {
-	padding-top: 1rem;
-	padding-bottom: 5rem;
+	h1 {
+		font-size: @h1Relative;
+	}
 	
-	nav {
+	h2 {
+		font-size: @h2Relative;
+	}
+	
+	h3 {
+		font-size: @h3Relative;
+	}
+	
+	h1, h2, h3, p, li {
+		color: @baselineFontColor;
+	}
+	
+	header {
+		padding-top: 1rem;
+		padding-bottom: 5rem;
+		
+		nav {
+			display: flex;
+			justify-content: center;
+	
+			a {
+				// .testBorder();
+				background: rgb(10, 10, 10);
+				.roundCorners();
+				padding: 0.5rem 2.5rem;
+				margin: 0rem 3rem;
+				color: lightgrey;
+				text-decoration: none;
+			}
+		}
+	}
+	
+	.banner {
 		display: flex;
 		justify-content: center;
-
-		a {
-			// .testBorder();
-			background: rgb(10, 10, 10);
-			.roundCorners();
-			padding: 0.5rem 2.5rem;
-			margin: 0rem 3rem;
-			color: lightgrey;
-			text-decoration: none;
+	
+		.avatar {
+			margin-right: @bannerMiddleMargin;
+	
+			img {
+				height: @avatarDiameter;
+				border-radius: 50%;
+				border: @standardBorder;
+			}
 		}
-	}
-}
-
-.banner {
-	display: flex;
-	justify-content: center;
-
-	.avatar {
-		margin-right: @bannerMiddleMargin;
-
-		img {
-			height: @avatarDiameter;
-			border-radius: 50%;
-			border: @standardBorder;
-		}
-	}
-
-	.tile {
-		margin-left: @bannerMiddleMargin;
-		.flexColumn();
-		align-items: center;
-		justify-content: space-between;
-
-		.bio.short {
-			font-size: @h3Relative;
+	
+		.tile {
+			margin-left: @bannerMiddleMargin;
 			.flexColumn();
 			align-items: center;
-			line-height: 3rem;
-			color: lightgrey;
+			justify-content: space-between;
+	
+			.bio.short {
+				font-size: @h3Relative;
+				.flexColumn();
+				align-items: center;
+				line-height: 3rem;
+				color: lightgrey;
+			}
+	
+			button {
+				margin-bottom: 1rem;
+				background: rgb(10, 10, 10);
+				border: none;
+				padding: 0.5rem;
+				.roundCorners();
+			}
 		}
-
+	}
+	
+	.info {
+		.flexColumn();
+		margin: 1rem;
+	
+		.box {
+			margin: 1rem;
+		}
+	
+		.box.top {
+			display: flex;
+			align-items: center;
+			margin-top: 2rem;
+	
+			.left {
+				display: block;
+				.giveStandardBorder();
+				max-width: 60%;
+				padding: 1rem;
+			}
+	
+			.right {
+				.flexColumn();
+				align-items: flex-start;
+				flex-grow: 1;
+				.giveStandardBorder();
+			
+				.skills {
+					margin: 1rem 0.5rem;
+				}
+	
+				hr {
+					margin: 0 1rem;
+					border: 0;
+					border-bottom: 1px solid lightgrey;
+				}
+	
+				.interests {
+					margin: 1rem 0.5rem; // Hmm... a little repetition here! Better class names would have prevented this.
+				}
+	
+				ol {
+					padding-left: 1.5rem;
+				}
+	
+				h2 {
+					margin-bottom: 1rem;
+				}
+			}
+		}
+	
+		.box.bottom {
+			.giveStandardBorder();
+			padding: 1rem;
+	
+			h2 {
+				margin-bottom: 1rem;
+			}
+	
+			ul {
+				list-style: none;
+			}
+		}
+	}
+	
+	footer {
+		display: flex;
+		justify-content: center;
+	
 		button {
 			margin-bottom: 1rem;
 			background: rgb(10, 10, 10);
 			border: none;
 			padding: 0.5rem;
+			margin: 1rem;
 			.roundCorners();
+			color: lightgrey;
 		}
-	}
-}
-
-.info {
-	.flexColumn();
-	margin: 1rem;
-
-	.box {
-		margin: 1rem;
-	}
-
-	.box.top {
-		display: flex;
-		align-items: center;
-		margin-top: 2rem;
-
-		.left {
-			display: block;
-			.giveStandardBorder();
-			max-width: 60%;
-			padding: 1rem;
-		}
-
-		.right {
-			.flexColumn();
-			align-items: flex-start;
-			flex-grow: 1;
-			.giveStandardBorder();
-		
-			.skills {
-				margin: 1rem 0.5rem;
-			}
-
-			hr {
-				margin: 0 1rem;
-				border: 0;
-				border-bottom: 1px solid lightgrey;
-			}
-
-			.interests {
-				margin: 1rem 0.5rem; // Hmm... a little repetition here! Better class names would have prevented this.
-			}
-
-			ol {
-				padding-left: 1.5rem;
-			}
-
-			h2 {
-				margin-bottom: 1rem;
-			}
-		}
-	}
-
-	.box.bottom {
-		.giveStandardBorder();
-		padding: 1rem;
-
-		h2 {
-			margin-bottom: 1rem;
-		}
-
-		ul {
-			list-style: none;
-		}
-	}
-}
-
-footer {
-	display: flex;
-	justify-content: center;
-
-	button {
-		margin-bottom: 1rem;
-		background: rgb(10, 10, 10);
-		border: none;
-		padding: 0.5rem;
-		margin: 1rem;
-		.roundCorners();
-		color: lightgrey;
 	}
 }
