--- a/css/index.css
+++ b/css/index.css
@@ -164,6 +164,12 @@ body {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .container header nav {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .container header nav a {
   background: #0a0a0a;
   border-radius: 5px;
@@ -171,6 +177,11 @@ body {
   margin: 0rem 3rem;
   color: lightgrey;
   text-decoration: none;
+}
+@media (max-width: 500px) {
+  .container header nav a {
+    margin: 0.5rem 5rem;
+  }
 }
 .container .banner {
   display: flex;
